# uniform-cubic-splines

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  rustfmt.toml
benches/: inverse_optimization.rs  speed.rs
examples/: basic_usage.rs  minimal_traits.rs
src/: basis.rs  basis_macros.rs  convert.rs  error.rs  invert.rs  lib.rs  spline_trait.rs
tests/: nalgebra_integration.rs
