[package]
name = "uniform-cubic-splines"
version = "0.3.0"
authors = ["Moritz Moeller <virtualritz@gmail.com>"]
edition = "2021"
readme = "README.md"
keywords = ["splines", "curves", "graphics", "inversion", "cubic"]
categories = ["mathematics", "graphics", "multimedia", "no-std"]
license = "MIT OR Apache-2.0 OR Zlib"
description = "Simple uniform cubic spline evaluation and inversion."
documentation = "https://docs.rs/uniform-cubic-splines/"
repository = "https://github.com/virtualritz/uniform-cubic-splines/"
rust-version = "1.83"

[dependencies]
lerp = "0.5"
num-traits = "0.2"

[dev-dependencies]
rand = "0.9"

[features]
default = ["monotonic_check"]
# Enable the `is_sorted()` check on `spline_inverse()`
monotonic_check = []

[profile.bench]
debug = true
