[package]
name = "uniform-cubic-splines"
version = "0.5.0"
authors = ["Moritz Moeller <virtualritz@gmail.com>"]
edition = "2021"
rust-version = "1.83"
readme = "README.md"
keywords = ["splines", "curves", "graphics", "inversion", "cubic"]
categories = ["mathematics", "graphics", "multimedia", "no-std"]
license = "MIT OR Apache-2.0 OR Zlib"
description = "Simple uniform cubic spline evaluation and inversion."
documentation = "https://docs.rs/uniform-cubic-splines/"
repository = "https://github.com/virtualritz/uniform-cubic-splines/"

[features]
default = ["monotonic_check"]
## The `spline_inverse()`/[`spline_inverse_with()`] code will check if the knot
## vector is monotonic. Disabling improves performance by ~5-10% but requires monotonic input.
monotonic_check = []
## Enable f16 support on nightly Rust.
nightly_f16 = ["num-traits/nightly_f16"]
## Enable f128 support on nightly Rust.
nightly_f128 = ["num-traits/nightly_f128"]

[dependencies]
document-features = "0.2"
lerp = "0.5"
num-traits = "0.2"
thiserror = { version = "2", default-features = false }

[dev-dependencies]
criterion = "0.7"
nalgebra = "0.34"
rand = "0.9"

[[bench]]
name = "speed"
harness = false

[[bench]]
name = "inverse_optimization"
harness = false

[profile.bench]
debug = true

[patch.crates-io]
num-traits = { git = "https://github.com/virtualritz/num-traits.git" }
